# keyboard_gen

./: .gitignore  README.md  distance_matrix.rs  package.json
python/: README.md  calc_distance_matrix.py  cli_keycombinations.py  config.py  cost_matrix.npy  create_dataset.py  create_keyboard.py  custom_keyboard.keylayout  datatypes.py  genetic_algo.py  keyboard.json  keyboard_snippets.py  keylogger.py  main.py  process_reuters.py  pyproject.toml  utils.py  visualize_keydata.ipynb
python/assets/: cost_matrix.npy  cost_matrix_1d.npy  keyboard_layout.keylayout
python/datasets/: js_dataset.txt
src/: App.tsx  index.html  index.tsx  keys.ts  styles.css  types.ts
src/assets/sass/: main.scss
src/assets/sass/base/: _base.scss  _home.scss
src/components/: Keyboard.tsx
